--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -69,7 +69,7 @@
                            href="{{ url_for('causes.cause_support', slug=cause.slug) }}">
                            {{ _('Stand with us!') }}
                        </a>
-                       <span>
+                       <span class="hero-aside">
                            {{ _("Join this cause's community, and stay updated on actions") }}
                        </span>
                     {% endif %}
