Fixed slight post-merge messup: forgot one div closing tag

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -186,6 +186,7 @@
                 {{ _('Take action to win') }}
                 <span>{{ _('(%(count)s current)', count=cause.actions.count()) }}</span>
             </h3>
+        </div>
     </div>
     {{ render_action_list(cause) }}
     <hr>
