--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -147,6 +147,7 @@ a:hover {
     line-height: 2.1em;
     text-decoration: none;
     font-size: 1.6rem;
+    margin-bottom: 0.3em;
 }
 .icon {
     width: 1em;
