--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -148,6 +148,15 @@ a:hover {
     text-decoration: none;
     font-size: 1.6rem;
     margin-bottom: 0.3em;
+    transition-duration: 0.1s;
+    transition-property: border-radius;
+    -webkit-transition-duration: 0.1s;
+    -webkit-transition-property: border-radius;
+}
+.avatar-sm:hover {
+    text-decoration: none;
+    color: #fff;
+    border-radius: 0;
 }
 .icon {
     width: 1em;
