--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -138,9 +138,10 @@
             <h4 class="u-add-margin-top">
                 {{ _('%(count)s supporters', count=cause.supporters.count()) }}:
             </h4>
-            {% for u in cause.supporters.all() %}
+            {% for u in cause.supporters.all()[-10:] | reverse %}
                 {{ render_avatar(u) }}
             {% endfor %}
+            <!--<small><a href="#">See all {{ cause.supporters.count() }}</a></small>-->
             <h4 class="u-add-margin-top">
                 {{ _('Creators') }}:
             </h4>
