Rebasing fixes, working language switcher

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -74,7 +74,7 @@
                                 <a href="javascript:translate('es');">Espa&ntilde;ol</a>
                             {% endif %}
                         </div>
-                    </div>-->
+                    </div>
                     
                     {% if current_user.is_admin %}
                     <a href="{{ url_for('admin.admin') }}" 
