--- a/app/templates/admin/page_list.html
+++ b/app/templates/admin/page_list.html
@@ -10,10 +10,10 @@
             <table>
                 <thead>
                     <tr>
-                        <th>id</th>
-                        <th>name</th>
-                        <th>url</th>
-                        <th>edit</th>
+                        <th>{{ _('id') }}</th>
+                        <th>{{ _('name') }}</th>
+                        <th>{{ _('url') }}</th>
+                        <th>{{ _('edit') }}</th>
                     </tr>
                 </thead>
                 <tbody>
