Changed cause layout to match modified mockup #1, as discussed on our call. Still working on redesign of actions and conversations.

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -330,6 +330,11 @@ a:hover {
         margin-right: auto;
     }
 }
+
+
+.feed .feed-item {
+    display: block;
+}
 a.support-action {
     text-decoration: none;
 }
