--- a/app/templates/helpers/actions.html
+++ b/app/templates/helpers/actions.html
@@ -2,6 +2,69 @@
 dont' forget to add a description of your changes to the appropriate styleguide
 section (app/templates/styleguide/templating#)
 -->
+{% macro render_action_new(cause, action) %}
+{% from "helpers/users.html" import render_avatar %}
+<a class="support-action"
+   data-target="modal-action-{{ action.id }}">
+    <h5>{{ action.title }}</h5>
+    <article class="u-add-margin-bottom">{{ action.summary }}</article>
+    <small class="support-action-counter u-pull-left">
+        <img class="icon" src="{{ url_for('static', filename='open-iconic/png/bullhorn-2x.png') }}"> 
+        {{ _('%(count)s supporters', count=action.supporters.count()) }}
+    </small>
+    <small class="support-action-details-btn u-pull-right">
+        {{ _('Details') }}
+    </small>
+    {% if action.expiration %}
+        <h6>Expires: {{ action.expiration.strftime('%b. %d, %Y') }}</h6>
+    {% endif %}
+</a>
+<div id="modal-action-{{ action.id }}" class="modal">
+    <div>
+        <h3 class="u-pull-left u-remove-margin-bottom">{{ action.title }}</h3>
+        <a href="#" class="button-modal-close u-pull-right">
+            <img src="/static/open-iconic/png/x-2x.png" alt="X" />
+        </a>
+        <p class="u-cf">
+            {{ action.description|markdown }}
+        </p>
+        {% if current_user not in action.supporters.all() %}
+        <p class="u-remove-margin-bottom u-pull-right">
+            {% if action.link %}
+            <a class="button button-primary support" rel="external"  target="_blank"
+                data-support-href="{{ url_for('causes.action_support', slug=cause.slug,
+                pk=action.id) }}"
+                href="{{ action.link }}">{{ _('Support!') }}</a>
+            {% else %}
+            <a class="button button-primary" href="{{ url_for('causes.action_support', slug=cause.slug,
+                pk=action.id) }}">{{ _('Support!') }}</a>
+            {% endif %}
+        </p>
+        {% endif %}
+        {% if current_user in cause.creators.all() or current_user.is_admin %}
+        <p>
+            <a class="button primary u-pull-right u-add-margin-right" 
+                href="{{ url_for('causes.action_edit', slug=cause.slug,
+                pk=action.id) }}">Edit!</a>
+        </p>
+        {% endif %}
+        {% if action.supporters %}
+        <p class="u-remove-margin-bottom u-pull-left">
+            {% for supporter in action.supporters %}
+                {{ render_avatar(supporter) }}
+            {% endfor %}
+        </p>
+        {% endif %}
+        <br class="u-cf">
+    </div>
+</div>
+{% endmacro %}
+
+{% macro render_action_list_new(cause) %}
+{% for action in cause.actions.all() %}
+    {{ render_action(cause, action) }}
+{% endfor %}
+{% endmacro %}
 
 {% macro render_action(cause, action) %}
 {% from "helpers/users.html" import render_avatar %}
