--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -3,8 +3,6 @@ dont' forget to add a description of your changes to the appropriate styleguide
 section (app/templates/styleguide/templating#cause-helpers)
 -->
 
-{% from "helpers/users.html" import render_avatar %}
-
 {% macro render_cause_info(caption, info) %}
 <p class="u-cf u-remove-margin-bottom">
     <strong>{{ caption }}</strong>
@@ -13,6 +11,7 @@ section (app/templates/styleguide/templating#cause-helpers)
 {% endmacro %}
 
 {% macro render_log(log) %}
+{% from "helpers/users.html" import render_avatar %}
 {% set captions={
     1: 'Added a cause',
     2: 'Edited a cause',
@@ -29,8 +28,9 @@ section (app/templates/styleguide/templating#cause-helpers)
 <div class="feed-item">
     <small>{{ event.logged_at.strftime('%b %d, %Y @ %H:%M') }}</small>
     <p>
-        {{ render_avatar(event.user) }} 
-        {{ captions[event.event_type_id] }} 
+        {{ render_avatar(event.user) }}&nbsp;
+        {{ captions[event.event_type_id] }}:
+        {# url_for(event.item, slug=event.item.cause.slug) #}{{ event.item.title }}
     </p>
 </div>
 {% endfor %}
