--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -15,7 +15,7 @@ section (app/templates/styleguide/templating#cause-helpers)
 {% set captions={
     1: 'Added a cause',
     2: 'Edited a cause',
-    3: 'Suppored a cause',
+    3: 'Supported a cause',
     4: 'Reached cause milestone',
     5: 'Added an action',
     6: 'Supported an action',
