Tweak action pop-up by hash:
 - add hash to "new action" e-mail
 - set window hash on opening pop-up to facilitate sharing link
 - remove hash on closing pop-up

--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -64,6 +64,8 @@
                 eventAction: 'popup close',
                 eventLabel: action_name
             });
+            e.preventDefault();
+            history.pushState("", document.title, window.location.pathname);
         });
         $('a.support').click(function(e) {
             var action_name = $(e.target).parents('.modal').find('h3').text();
