Added link to event on cause feed

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -79,6 +79,10 @@ a:hover {
     color: #1eaeda;
     text-decoration: underline;
 }
+a.feed-link {
+    margin-left: 2.7em;
+    display: block;
+}
 
 /* Alerts 
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
