--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -151,7 +151,7 @@ a.feed-link {
     line-height: 2.1em;
     text-decoration: none;
     font-size: 1.6rem;
-    margin-bottom: 0.creators;
+    margin-bottom: 0.3em;
     transition-duration: 0.1s;
     transition-property: border-radius;
     -webkit-transition-duration: 0.1s;
