Working on action display

--- a/app/templates/causes/actions.html
+++ b/app/templates/causes/actions.html
@@ -40,6 +40,6 @@
         </div>
     </div>
     <hr class="u-remove-margin-bottom">
-    {{ render_action_list(cause) }}
+    {{ render_action_list(actions.all()) }}
 </div>
 {% endblock %}
