--- a/app/templates/helpers/causes.html
+++ b/app/templates/helpers/causes.html
@@ -31,7 +31,7 @@ section (app/templates/styleguide/templating#cause-helpers)
         {{ render_avatar(event.user) }}&nbsp;
         {{ captions[event.event_type_id] }}:<br>
         {% if event.event_type_id in [1,2,3,4] %}
-        <a class="feed-link"  href="{{ url_for('causes.cause_detail', slug=event.item.cause.slug) }}">
+        <a class="feed-link"  href="{{ url_for('causes.cause_detail', slug=event.item.slug) }}">
             {{ event.item.title }}
         </a>
         {% elif event.event_type_id in [5,6,7] %}
