Add admin "Causes" section

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -10,6 +10,9 @@
 				{{ _('Admin') }}
 			</h2>
 			<ul>
+				<li><a href="{{ url_for('.admin_cause_list') }}">
+					{{ _('Manage causes') }}
+				</a></li>
 				<li><a href="{{ url_for('.admin_user_list') }}">
 					{{ _('Manage users') }}
 				</a></li>
