--- a/app/templates/helpers/actions.html
+++ b/app/templates/helpers/actions.html
@@ -45,7 +45,7 @@ section (app/templates/styleguide/templating#)
         <p>
             <a class="button primary u-pull-right u-add-margin-right" 
                 href="{{ url_for('causes.action_edit', slug=cause.slug,
-                pk=action.id) }}">Edit!</a>
+                pk=action.id) }}">Edit</a>
         </p>
         {% endif %}
         {% if action.supporters %}
