--- a/app/templates/helpers/users.html
+++ b/app/templates/helpers/users.html
@@ -2,5 +2,5 @@
 <a href="{{ url_for('users.user', nickname=user.nickname) }}"
    class="avatar-sm"
    style="background-color:{{ user.color }}"
-   title="{{ user.full_name }}">{{ user.initials }}</a>
+   title="{{ user.full_name|default(user.nickname) }}">{{ user.initials }}</a>
 {% endmacro %}
